--- a/Jupyter/KafkaConsumer.ipynb
+++ b/Jupyter/KafkaConsumer.ipynb
@@ -73,9 +73,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Anaconda 2.5.0 (Python 2)",
    "language": "python",
-   "name": "python2"
+   "name": "anaconda_2.5.0_python2"
   },
   "language_info": {
    "codemirror_mode": {
